# youBlewIt-gym

./: .gitignore  README.md  baseline.py  debut.py  game.py  main.py  play.py  pyproject.toml  qlearn.py  requirements.txt  scorer.py  simulate.py  train.py  train_ppo.py
gym_env/: __init__.py  you_blew_it.py  you_blew_it_1v1.py  you_blew_it_v2.py
strategies/: __init__.py  basic_strategy.py  evans_strategy.py  game_aware_strategy.py  moms_strategy.py  ppo_strategy.py  random_strategy.py
