[project]
name = "youblewitgym"
version = "0.1.0"
description = "A reinforcement learning environment for the dice game 'You Blew It'"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "sb3-contrib>=2.4.0",
    "stable-baselines3>=2.4.0",
    "wandb>=0.19.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gym_env", "strategies"]
include = ["game.py", "scorer.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
